--- a/index.html
+++ b/index.html
@@ -58,54 +58,54 @@
             </div>
             <hr />
             <h1 class="text-center">Tech Stack</h1>
-            <div class="row text-center ">
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img width="150px" src="https://image.flaticon.com/icons/svg/919/919827.svg" alt="html" />
+            <div class=" row text-center ">
+                <div  class="col-sm-12 col-md-6 col-lg-4 mt-4">
+                    <img class="hov"width="150px" src="https://image.flaticon.com/icons/svg/919/919827.svg" alt="html" />
                     <h4>HTML</h4>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img width="150px"
+                <div class="  col-sm-12 col-md-6 col-lg-4 mt-4">
+                    <img class="hov"width="150px"
                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
                         alt="css" />
                     <h4>CSS</h4>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img width="150px" src="./images/js.png" />
+                <div class=" col-sm-12 col-md-6 col-lg-4 mt-4">
+                    <img  class="hov"width="150px" src="./images/js.png" />
                     <h4>JAVASCRIPT</h4>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img width="150px"
+                <div class="  col-sm-12 col-md-6 col-lg-4 mt-4">
+                    <img class="hov"width="150px"
                         src="https://mpng.subpng.com/20180409/wzq/kisspng-responsive-web-design-bootstrap-sass-cascading-sty-framework-5acb894b310f34.453583861523288395201.jpg" />
                     <h4>BOOTSTRAP</h4>
                 </div>
                 <div class="  col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img width="150px" src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
+                    <img class="hov"width="150px" src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
                     <h4>REACT</h4>
                 </div>
 
             </div>
             <hr />
             <h1 class="text-center">Proficiencies</h1>
-            <div class="row text-center ">
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-4 ">
+            <div class="  row text-center ">
+                <div class=" pro col-sm-12 col-md-6 col-lg-4 mt-4 ">
                     <img width="150px" src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
                     <h2>React App</h2>
                     <h5 class="text-secondary ">When it comes to react apps
                         I have the strength of Atlas</h5>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
+                <div class=" pro col-sm-12 col-md-6 col-lg-4 mt-4">
                     <img width="150px" src="./images/backened.png" alt="backened" />
                     <h2>Backened</h2>
                     <h5 class="text-secondary">I am the one who runs
                         the show</h5>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-4">
+                <div class="pro col-sm-12 col-md-6 col-lg-4 mt-4">
                     <img width="120px" src="https://mihirlaldas.github.io/assets/img/css3-alt-brands.svg" />
                     <h2>Frontend</h2>
                     <h5 class="text-secondary">Now just that I can
                         even host the show</h5>
                 </div>
-                <div class="col-sm-12 col-md-4 mt-5 ">
+                <div class=" pro col-sm-12 col-md-4 mt-5 ">
                     <img width="150px" src="https://mihirlaldas.github.io/assets/img/Vector.svg" />
                     <h2>Data Structures</h2>
                     <h5 class="text-secondary ">Putting the right blocks in the
@@ -118,18 +118,20 @@
             <h1 class="text-center">Projects</h1>
 
             <div class="row">
-                <div class=" col-sm-12 col-md-6 col-lg-4 mt-5">
-                    <div class="card ml-2" style="height: 100%;border:1px solid #2E4053">
+                <div class=" col-sm-12 col-md-6 col-lg-4  mt-5 ">
+                    <div class=" shad card ml-2" style="height: 100%">
                         <img src="./images/covid19.jpeg" class="card-img-top" alt="project-1">
                         <div class="card-body">
                             <h1 class="card-title">Covid-19 website</h1>
                             <h5 class="card-text text-secondary">In this website you can check covid cases of any
                                 countries.
                                 All details are available in one platform.</h5>
-                            <div class="text-center">
+                            <div class="text-left">
                                 <a href="https://github.com/madhurisonawat/masai--sprint-3"><img
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg"
                                         width="40px" /></a>Github Link
+                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
+                                <hr/>
                                 <div class="mt-3">
                                     <img class="mr-3" src="https://image.flaticon.com/icons/svg/732/732212.svg"
                                         width="30px" />
@@ -141,8 +143,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
-                    <div class="card" style="height: 100%;border:1px solid #2E4053">
+                <div class="col-sm-12 col-md-6 col-lg-4  mt-5 ">
+                    <div class="shad  card" style="height: 100%">
                         <img src="./images/dog.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1 class="card-title">Dog Adoption Website</h1>
@@ -150,11 +152,13 @@
                                 information of that dog
                                 and some related images
                                 of that particular dog. Now book or adopt dog online.</h5>
-                            <div class="text-center">
+                            <div class="text-left">
                                 <a href="https://github.com/soumitha18/Masai_sprint_6" target="blank">
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
+                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
+                                <hr/>
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -168,8 +172,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
-                    <div class="card" style="height: 100% ; border:1px solid #2E4053 ">
+                <div class=" col-sm-12 col-md-6 col-lg-4 mt-5 ">
+                    <div class="shad card" style="height: 100% ">
                         <img src="./images/car.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1 class="card-title">Car Rental Service</h1>
@@ -177,11 +181,13 @@
                                 and rent
                                 according to your choice in terms of price and color.
                                 Booking syststem is also included. This app lets you book car hassel free.</h5>
-                            <div class="text-center">
+                            <div class="text-left">
                                 <a href="https://github.com/madhurisonawat/masai-sprint-4" target="blank">
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
+                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
+                                <hr/>
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -196,20 +202,22 @@
                 </div>
 
 
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
+                <div class=" col-sm-12 col-md-6 col-lg-4  mt-5 ">
 
-                    <div class="card " style="height: 100%;border:1px solid #2E4053">
+                    <div class="shad card " style="height: 100%">
                         <img src="./images/calculator.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1 class="card-title">Calculator</h1>
                             <h5 class="card-text text-secondary">Simple calculator for all your calculations.</h5>
 
-                            <div class="text-center">
+                            <div class="text-left">
                                 <a href="https://github.com/masai-course/ac_040_madhuri/tree/master/week_14/day_6/calculator/simple_calculator"
                                     target="blank">
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
+                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
+                                <hr/>
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -223,18 +231,20 @@
                     </div>
                 </div>
 
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
-                    <div class="card " style="height: 100%;border:1px solid #2E4053">
+                <div class="col-sm-12 col-md-6 col-lg-4  mt-5 ">
+                    <div class=" shad card " style="height: 100%">
                         <img src="./images/speed_typing.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1 class="card-title">Speed Typing Game</h1>
                             <h5 class="card-text text-secondary"> Check your speed and accuracy and improve accordingly.
                             </h5>
-                            <div class="text-center">
+                            <div class="text-left">
                                 <a href="https://github.com/madhurisonawat/Typing-speed" traget="blank">
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
+                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
+                                <hr/>
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -247,8 +257,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-4 mt-5">
-                    <div class="card" style="height: 100%;border:1px solid #2E4053">
+                <div class="col-sm-12 col-md-6 col-lg-4 mt-5 ">
+                    <div class="shad card" style="height: 100%">
                         <img src="./images/flourist.jpeg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h1 class="card-title">Flourist Website</h1>
@@ -256,12 +266,14 @@
                                 product made from fresh milled flours.
                                 Stone-milled to order, and delivered to your door.
                             </h5>
-                            <div class="text-center">
+                            <div class="text-left">
                                 <a href="https://github.com/masai-course/ac_040_madhuri/tree/master/week_18/day_2/assignments/router-project-madhuri-sonawat"
                                     target="blank">
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
+                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
+                                <hr/>
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -279,25 +291,25 @@
             <div id="coding" class="container-fluid p-5 mt-5">
                 <div class=" text-center">
                     <div class="row">
-                        <div class="col-sm-12 col-md-6  col-lg-3">
+                        <div class="shad1  col-sm-12 col-md-6  col-lg-3">
                             <div class="offset-3 rounded-circle p-3 one">
                                 <h1>1200+ hrs</h1>
                             </div>
                             <h1>Coding</h1>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class=" shad1 col-sm-12 col-md-6 col-lg-3">
                             <div class="offset-3 rounded-circle p-3 one">
                                 <h1>260+</h1>
                             </div>
                             <h1>HackerRank Problems</h1>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="shad1 col-sm-12 col-md-6 col-lg-3">
                             <div class="offset-3 rounded-circle p-3 one">
                                 <h1>280+</h1>
                             </div>
                             <h1>Git Commits</h1>
                         </div>
-                        <div class="col-sm-12 col-md-6 col-lg-3">
+                        <div class="shad1 col-sm-12 col-md-6 col-lg-3">
                             <div class="offset-3 rounded-circle p-3 one">
                                 <h1>12+</h1>
                             </div>
@@ -311,20 +323,20 @@
 
             <hr />
             <img class="git" src="images/git.jpeg" />
-            <div class="row text-center">
-                <div class="col-sm-12 col-md-4 ">
+            <div class=" row text-center">
+                <div class="shad col-sm-12 col-md-4 ">
                     <p>Contributions in the last year</p>
                     <h2>268 Total</h2>
                     <p>April 17, 2020 – December, 2020</p>
                     <hr />
                 </div>
-                <div class="col-sm-12 col-md-4 ">
+                <div class=" shad col-sm-12 col-md-4 ">
                     <p>Longest streak</p>
                     <h2>13 days</h2>
                     <p> May 4 – May 16</p>
                     <hr />
                 </div>
-                <div class="col-sm-12 col-md-4 ">
+                <div class="shad col-sm-12 col-md-4 ">
                     <p>Current streak</p>
                     <h2> 0 days</h2>
                     <p>Last contributed in October</p>
