--- a/index.html
+++ b/index.html
@@ -59,54 +59,58 @@
             <hr />
             <h1 class="text-center">Tech Stack</h1>
             <div class=" row text-center ">
-                <div  class="col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img class="hov"width="150px" src="https://image.flaticon.com/icons/svg/919/919827.svg" alt="html" />
+
+
+                <div id="see" class="col-sm-12 col-md-4 col-lg-2 ml-5 m-3 mt-4 ">
+                    <img width="100px" src="https://image.flaticon.com/icons/svg/919/919827.svg" alt="html" />
                     <h4>HTML</h4>
                 </div>
-                <div class="  col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img class="hov"width="150px"
+                <div id="see" class="col-sm-12 col-md-4 col-lg-2  m-3 mt-4">
+                    <img width="100px"
                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
                         alt="css" />
                     <h4>CSS</h4>
                 </div>
-                <div class=" col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img  class="hov"width="150px" src="./images/js.png" />
+                <div id="see" class="col-sm-12 col-md-4 col-lg-2  m-3 mt-4">
+                    <img width="100px" src="./images/js.png" />
                     <h4>JAVASCRIPT</h4>
                 </div>
-                <div class="  col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img class="hov"width="150px"
+                <div id="see" class="col-sm-12 col-md-4 col-lg-2  m-3 mt-4">
+                    <img width="100px"
                         src="https://mpng.subpng.com/20180409/wzq/kisspng-responsive-web-design-bootstrap-sass-cascading-sty-framework-5acb894b310f34.453583861523288395201.jpg" />
                     <h4>BOOTSTRAP</h4>
                 </div>
-                <div class="  col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img class="hov"width="150px" src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
+                <div id="see" class="  col-sm-12 col-md-4 col-lg-2  m-3 mt-4">
+                    <img width="100px" src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
                     <h4>REACT</h4>
                 </div>
+
+
 
             </div>
             <hr />
             <h1 class="text-center">Proficiencies</h1>
             <div class="  row text-center ">
-                <div class=" pro col-sm-12 col-md-6 col-lg-4 mt-4 ">
-                    <img width="150px" src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
+                <div id="see" class=" pro col-sm-12 col-md-6 col-lg-3  m-5 ml-5 mt-4 ">
+                    <img width="100px" src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
                     <h2>React App</h2>
                     <h5 class="text-secondary ">When it comes to react apps
                         I have the strength of Atlas</h5>
                 </div>
-                <div class=" pro col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img width="150px" src="./images/backened.png" alt="backened" />
+                <div id="see" class=" pro col-sm-12 col-md-6 col-lg-3 m-5  mt-4">
+                    <img width="100px" src="./images/backened.png" alt="backened" />
                     <h2>Backened</h2>
                     <h5 class="text-secondary">I am the one who runs
                         the show</h5>
                 </div>
-                <div class="pro col-sm-12 col-md-6 col-lg-4 mt-4">
-                    <img width="120px" src="https://mihirlaldas.github.io/assets/img/css3-alt-brands.svg" />
+                <div id="see" class="pro col-sm-12 col-md-6 col-lg-3 m-5 mt-4">
+                    <img width="100px" src="https://mihirlaldas.github.io/assets/img/css3-alt-brands.svg" />
                     <h2>Frontend</h2>
                     <h5 class="text-secondary">Now just that I can
                         even host the show</h5>
                 </div>
-                <div class=" pro col-sm-12 col-md-4 mt-5 ">
-                    <img width="150px" src="https://mihirlaldas.github.io/assets/img/Vector.svg" />
+                <div id="see" class=" pro col-sm-12 col-md-4 col-lg-3 m-5 ml-5 mt-5 ">
+                    <img width="100px" src="https://mihirlaldas.github.io/assets/img/Vector.svg" />
                     <h2>Data Structures</h2>
                     <h5 class="text-secondary ">Putting the right blocks in the
                         right place is just my thing</h5>
@@ -130,8 +134,9 @@
                                 <a href="https://github.com/madhurisonawat/masai--sprint-3"><img
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg"
                                         width="40px" /></a>Github Link
-                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
-                                <hr/>
+                                <a href=""><img class="live"
+                                        src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                <hr />
                                 <div class="mt-3">
                                     <img class="mr-3" src="https://image.flaticon.com/icons/svg/732/732212.svg"
                                         width="30px" />
@@ -157,8 +162,9 @@
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
-                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
-                                <hr/>
+                                <a target="blank" href="https://dog-galore.netlify.app/"><img class="live"
+                                        src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                <hr />
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -186,8 +192,9 @@
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
-                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
-                                <hr/>
+                                <a href=""><img class="live"
+                                        src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                <hr />
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -216,8 +223,9 @@
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
-                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
-                                <hr/>
+                                <a href=""><img class="live"
+                                        src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                <hr />
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -243,8 +251,9 @@
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
-                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
-                                <hr/>
+                                <a href=""><img class="live"
+                                        src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                <hr />
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
@@ -272,8 +281,9 @@
                                     <img width="40px"
                                         src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                 </a>Github Link
-                                <a href=""><img class="live"src="https://image.flaticon.com/icons/svg/2178/2178011.svg"/></a>
-                                <hr/>
+                                <a target="blank" href="https://flourist.netlify.app/#/journal"><img class="live"
+                                        src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                <hr />
                                 <div class="mt-3">
                                     <img class="mr-3" width="40px"
                                         src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
