--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
         <div>
             <img src="./images/waves.svg" />
         </div>
-        <!-- <div id="top"></div>
-        <div id="sec"> -->
         <div>
             <img id="photo" src="./images/madhuri.jpeg" alt="photo" />
             <h1 class="text-center">Madhuri Sonawat</h1>
@@ -195,13 +193,13 @@
                                     color
                                     and rent
                                     according to your choice in terms of price and color.
-                                    Booking syststem is also included. This app lets you book car hassel free.</h5>
+                                    Booking system is also included. This app lets you book car hassel free.</h5>
                                 <div class="text-left">
-                                    <a href="https://github.com/madhurisonawat/masai-sprint-4" target="blank">
+                                    <a href="https://car-rental-service-app.netlify.app/" target="blank">
                                         <img width="40px"
                                             src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                     </a>Github Link
-                                    <a href=""><img class="live"
+                                    <a href="https://car-rental-service-app.netlify.app"target="blank"><img class="live"
                                             src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
                                     <hr />
                                     <div class="mt-3">
@@ -263,7 +261,7 @@
                                         <img width="40px"
                                             src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
                                     </a>Github Link
-                                    <a href="check-typing-speed-app.netlify.app"><img class="live"
+                                    <a href="https://typing-speed-game.netlify.app/"><img class="live"
                                             src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
                                     <hr />
                                     <div class="mt-3">
