--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
                     </div>
                 </div>
+               
             </div>
 
 
@@ -56,6 +57,7 @@
                     Good on hands on experience efficiently coding websites and applications.
                     Looking forward to join a company where I can impart my skills. </h5>
             </div>
+            <div><a href="https://drive.google.com/file/d/1Oufk6khUCsq-c-pJsWXiYbR9SujMc2sp/view?usp=sharing"target="blank"><button id="btn">Resume</button></div></a>
         </div>
         <hr />
         <h1 class="text-center">Tech Stack</h1>
