--- a/index.html
+++ b/index.html
@@ -10,23 +10,23 @@
     <div>
         <div>
             <img src="./images/waves.svg" />
-        </div>
+        </div> 
         <div>
             <img id="photo" src="./images/madhuri.jpeg" alt="photo" />
             <h1 class="text-center">Madhuri Sonawat</h1>
             <h5 class="text-center text-secondary">Full Stack Developer</h5>
             <div class="container text-center mt-5">
                 <div class="row ">
-                    <div class="col-sm-12   col-md-3 col-lg-2 offset-lg-3">
+                    <div class="col-sm-12 col-md-3 col-lg-2 offset-lg-3">
                         <img width="15px" src="https://image.flaticon.com/icons/svg/64/64113.svg" alt="location" />
                         Bangalore, India
                     </div>
-                    <div class="col-sm-12  col-md-3 col-lg-2">
+                    <div class="col-sm-12 col-md-3 col-lg-2">
                         <img width="15px" src="https://image.flaticon.com/icons/svg/684/684911.svg" alt="phone" />
                         +91 9572745458
 
                     </div>
-                    <div class="col-sm-12   col-md-5 col-lg-4">
+                    <div class="col-sm-12 col-md-5 col-lg-4">
                         <img width="15px" src="https://image.flaticon.com/icons/svg/168/168955.svg" alt="email" />
                         madhurisonawat@gmail.com
 
@@ -60,8 +60,8 @@
             <div><a href="https://drive.google.com/file/d/1Oufk6khUCsq-c-pJsWXiYbR9SujMc2sp/view?usp=sharing"target="blank"><button id="btn">Resume</button></div></a>
         </div>
         <hr />
-        <h1 class="text-center">Tech Stack</h1>
-        <div class=" row text-center container-fluid py-4 ml-3">
+         <h1 class="text-center">Tech Stack</h1>
+        <div class="fit row text-center container-fluid py-4 ml-3">
 
 
             <div class="proficiency" class="col-sm-12 col-md-4 col-lg-2 m-3 ml-4 mt-4 ">
@@ -90,10 +90,10 @@
 
 
 
-        </div>
+        </div> 
         <hr />
-        <h1 class="text-center">Proficiency</h1>
-        <div class="  row text-center ml-3 ">
+         <h1 class="text-center">Proficiency</h1>
+         <div class=" fit row text-center ">
             <div class="proficiency" class="col-sm-12 col-md-6 col-lg-3 m-5 ml-4 mt-4 ">
                 <img width="100px" src="./images/react.png" alt="React" />
                 <h2>React App</h2>
@@ -120,7 +120,7 @@
             </div>
 
 
-        </div>
+        </div> 
         <hr />
         <h1 class="text-center">Projects</h1>
         <div id="project" class="container-fluid py-1">
@@ -346,11 +346,11 @@
                 </div>
 
             </div>
-        </div>
+        </div> 
 
         <hr />
-        <img class="git" src="images/git.jpeg" />
-        <div class=" row text-center">
+          <img class="git" src="images/git.jpeg" />
+        <div class="fit row text-center">
             <div class="shad col-sm-12 col-md-4 ">
                 <p>Contributions in the last year</p>
                 <h2>476 Total</h2>
@@ -370,7 +370,7 @@
                 <hr />
             </div>
 
-        </div>
+        </div> 
 
 
     </div>
