--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
             <div class="container text-center mt-5">
                 <div class="row ">
                     <div class="col-sm-12 col-md-3 col-lg-2 offset-lg-3">
-                        <img width="15px" src="https://image.flaticon.com/icons/svg/64/64113.svg" alt="location" />
+                        <img width="15px" src="https://cdn2.iconfinder.com/data/icons/pittogrammi/142/94-512.png" alt="location" />
                         Bangalore, India
                     </div>
                     <div class="col-sm-12 col-md-3 col-lg-2">
-                        <img width="15px" src="https://image.flaticon.com/icons/svg/684/684911.svg" alt="phone" />
+                        <img width="15px" src="https://cdn3.iconfinder.com/data/icons/font-awesome-solid/512/phone-256.png" alt="phone" />
                         +91 9572745458
 
                     </div>
                     <div class="col-sm-12 col-md-5 col-lg-4">
-                        <img width="15px" src="https://image.flaticon.com/icons/svg/168/168955.svg" alt="email" />
+                        <img width="15px" src="https://cdn4.iconfinder.com/data/icons/aiga-symbol-signs/439/aiga_mail-256.png" alt="email" />
                         madhurisonawat@gmail.com
 
                     </div>
@@ -40,11 +40,11 @@
 
         <div class="text-center mt-4 mb-4">
             <a class="ml-2" href="https://www.linkedin.com/in/madhuri-sonawat-25026b146/" target="blank"><img
-                    width="30px" src="https://image.flaticon.com/icons/svg/1409/1409945.svg" alt="linkedin" /></a>
+                    width="30px" src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Linkedin_unofficial_colored_svg-256.png" alt="linkedin" /></a>
             <a class="ml-2" href="https://github.com/madhurisonawat" target="blank"><img width="30px"
-                    src="https://www.flaticon.com/premium-icon/icons/svg/536/536452.svg" alt="github" /></a>
+                    src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-256.png" alt="github" /></a>
             <a class="ml-2" href="https://twitter.com/madhurisonawat" target="blank"><img width="30px"
-                    src="https://image.flaticon.com/icons/svg/733/733579.svg" alt="twitter" /></a>
+                    src="https://cdn2.iconfinder.com/data/icons/social-media-2285/512/1_Twitter3_colored_svg-512.png" alt="twitter" /></a>
             <a class="ml-2" href="https://www.hackerrank.com/madhurisonawat?hr_r=1" target="blank"><img width="30px"
                     src="https://cdn3.iconfinder.com/data/icons/logos-and-brands-adobe/512/160_Hackerrank-512.png"
                     alt="hackerrank" /></a>
@@ -57,20 +57,20 @@
                     Good on hands on experience efficiently coding websites and applications.
                     Looking forward to join a company where I can impart my skills. </h5>
             </div>
-            <div><a href="https://drive.google.com/file/d/1Oufk6khUCsq-c-pJsWXiYbR9SujMc2sp/view?usp=sharing"target="blank"><button id="btn">Resume</button></div></a>
+            <div><a href="https://drive.google.com/file/d/1HbBIJvyR0uA-dNvXoUn02e9wK_HB5AQj/view?usp=drive_link"target="blank"><button id="btn">Resume</button></div></a>
         </div>
         <hr />
          <h1 class="text-center">Tech Stack</h1>
-        <div class="fit row text-center container-fluid py-4 ml-3">
+        <div class="fit row text-center container-fluid py-4 ml-10">
 
 
             <div class="proficiency" class="col-sm-12 col-md-4 col-lg-2 m-3 ml-4 mt-4 ">
-                <img width="100px" src="https://image.flaticon.com/icons/svg/919/919827.svg" alt="html" />
+                <img width="100px" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/badge-html-5-512.png" alt="html" />
                 <h4>HTML</h4>
             </div>
             <div class="proficiency" class="col-sm-12 col-md-4 col-lg-2 m-3 ml-4 mt-4">
                 <img width="100px"
-                    src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
+                    src="https://cdn2.iconfinder.com/data/icons/Qetto___icons_by_ampeross-d4njobq/256/css.png"
                     alt="css" />
                 <h4>CSS</h4>
             </div>
@@ -80,11 +80,11 @@
             </div>
             <div class="proficiency" class="col-sm-12 col-md-4 col-lg-2 m-3 ml-4 mt-4">
                 <img width="100px"
-                    src="https://mpng.subpng.com/20180409/wzq/kisspng-responsive-web-design-bootstrap-sass-cascading-sty-framework-5acb894b310f34.453583861523288395201.jpg" />
+                    src="https://cdn0.iconfinder.com/data/icons/font-awesome-brands-vol-1/576/bootstrap-256.png" />
                 <h4>BOOTSTRAP</h4>
             </div>
             <div class="proficiency" class="  col-sm-12 col-md-4 col-lg-2 m-3 ml-4 mt-4">
-                <img width="100px" src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
+                <img width="100px" src="https://cdn0.iconfinder.com/data/icons/logos-brands-in-colors/128/react_color-64.png" alt="React" />
                 <h4>REACT</h4>
             </div>
 
@@ -139,17 +139,17 @@
                                     All details are available in one platform.</h5>
                                 <div class="text-left">
                                     <a href="https://github.com/madhurisonawat/masai--sprint-3"><img
-                                            src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg"
+                                            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png"
                                             width="40px" /></a>Github Link
                                     <a href="https://new-covid-19.netlify.app/" target="blank"><img class="live"
-                                            src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                            src="https://cdn1.iconfinder.com/data/icons/unicons-line-vol-4/24/link-h-256.png" /></a>
                                     <hr />
                                     <div class="mt-3">
-                                        <img class="mr-3" src="https://image.flaticon.com/icons/svg/732/732212.svg"
+                                        <img class="mr-3" src="https://cdn1.iconfinder.com/data/icons/logotypes/32/badge-html-5-512.png"
                                             width="30px" />
-                                        <img class="mr-3" src="https://image.flaticon.com/icons/svg/732/732190.svg"
+                                        <img class="mr-3" src="https://cdn2.iconfinder.com/data/icons/Qetto___icons_by_ampeross-d4njobq/256/css.png"
                                             width="30px" />
-                                        <img src="https://image.flaticon.com/icons/svg/919/919825.svg" width="30px" />
+                                        <img src="./images/js.png" width="30px" />
                                     </div>
 
                                 </div>
@@ -168,17 +168,17 @@
                                 <div class="text-left">
                                     <a href="https://github.com/soumitha18/Masai_sprint_6" target="blank">
                                         <img width="40px"
-                                            src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
+                                            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" />
                                     </a>Github Link
                                     <a target="blank" href="https://dog-galore.netlify.app/"><img class="live"
-                                            src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                            src="https://cdn1.iconfinder.com/data/icons/unicons-line-vol-4/24/link-h-256.png" /></a>
                                     <hr />
                                     <div class="mt-3">
                                         <img class="mr-3" width="40px"
-                                            src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
+                                            src="https://cdn2.iconfinder.com/data/icons/Qetto___icons_by_ampeross-d4njobq/256/css.png"
                                             alt="css" />
                                         <img class="mr-3" width="40px"
-                                            src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
+                                            src="https://cdn0.iconfinder.com/data/icons/logos-brands-in-colors/128/react_color-64.png" alt="React" />
                                         <img class="mr-3" width="40px" src="./images/js.png">
 
                                     </div>
@@ -199,17 +199,17 @@
                                 <div class="text-left">
                                     <a href="https://car-rental-service-app.netlify.app/" target="blank">
                                         <img width="40px"
-                                            src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
+                                            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" />
                                     </a>Github Link
                                     <a href="https://car-rental-service-app.netlify.app"target="blank"><img class="live"
-                                            src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                            src="https://cdn1.iconfinder.com/data/icons/unicons-line-vol-4/24/link-h-256.png" /></a>
                                     <hr />
                                     <div class="mt-3">
                                         <img class="mr-3" width="40px"
-                                            src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
+                                            src="https://cdn2.iconfinder.com/data/icons/Qetto___icons_by_ampeross-d4njobq/256/css.png"
                                             alt="css" />
                                         <img class="mr-3" width="40px"
-                                            src="https://mpng.subpng.com/20180409/wzq/kisspng-responsive-web-design-bootstrap-sass-cascading-sty-framework-5acb894b310f34.453583861523288395201.jpg" />
+                                            src="https://cdn0.iconfinder.com/data/icons/font-awesome-brands-vol-1/576/bootstrap-256.png" />
                                         <img class="mr-3" width="40px" src="./images/js.png">
                                     </div>
                                 </div>
@@ -231,19 +231,19 @@
                                     <a href="https://github.com/masai-course/ac_040_madhuri/tree/master/week_14/day_6/calculator/simple_calculator"
                                         target="blank">
                                         <img width="40px"
-                                            src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
+                                            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" />
                                     </a>Github Link
                                     <a href="https://react-calculator-react.netlify.app/" target="blank"><img
                                             class="live"
-                                            src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                            src="https://cdn1.iconfinder.com/data/icons/unicons-line-vol-4/24/link-h-256.png" /></a>
                                     <hr />
                                     <div class="mt-3">
                                         <img class="mr-3" width="40px"
-                                            src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
+                                            src="https://cdn2.iconfinder.com/data/icons/Qetto___icons_by_ampeross-d4njobq/256/css.png"
                                             alt="css" />
                                         <img class="mr-3" width="40px" src="./images/js.png">
                                         <img class="mr-3" width="40px"
-                                            src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
+                                            src="https://cdn0.iconfinder.com/data/icons/logos-brands-in-colors/128/react_color-64.png" alt="React" />
                                     </div>
                                 </div>
                             </div>
@@ -261,17 +261,17 @@
                                 <div class="text-left">
                                     <a href="https://github.com/madhurisonawat/Typing-speed" traget="blank">
                                         <img width="40px"
-                                            src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
+                                            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" />
                                     </a>Github Link
                                     <a href="https://typing-speed-game.netlify.app/"><img class="live"
-                                            src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                            src="https://cdn1.iconfinder.com/data/icons/unicons-line-vol-4/24/link-h-256.png" /></a>
                                     <hr />
                                     <div class="mt-3">
                                         <img class="mr-3" width="40px"
-                                            src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
+                                            src="https://cdn2.iconfinder.com/data/icons/Qetto___icons_by_ampeross-d4njobq/256/css.png"
                                             alt="css" />
                                         <img class="mr-3" width="40px"
-                                            src="https://mpng.subpng.com/20180409/wzq/kisspng-responsive-web-design-bootstrap-sass-cascading-sty-framework-5acb894b310f34.453583861523288395201.jpg" />
+                                            src="https://cdn0.iconfinder.com/data/icons/font-awesome-brands-vol-1/576/bootstrap-256.png" />
 
                                         <img class="mr-3" width="40px" src="./images/js.png">
                                     </div>
@@ -293,18 +293,18 @@
                                     <a href="https://github.com/masai-course/ac_040_madhuri/tree/master/week_18/day_2/assignments/router-project-madhuri-sonawat"
                                         target="blank">
                                         <img width="40px"
-                                            src="https://www.flaticon.com/premium-icon/icons/svg/2564/2564671.svg" />
+                                            src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" />
                                     </a>Github Link
                                     <a target="blank" href="https://flourist.netlify.app/#/journal"><img class="live"
-                                            src="https://image.flaticon.com/icons/svg/2178/2178011.svg" /></a>
+                                            src="https://cdn1.iconfinder.com/data/icons/unicons-line-vol-4/24/link-h-256.png" /></a>
                                     <hr />
                                     <div class="mt-3">
                                         <img class="mr-3" width="40px"
-                                            src="https://mpng.subpng.com/20190417/ppt/kisspng-cascading-style-sheets-css3-logo-html5-5cb6d68f07e746.7304415515554863510324.jpg"
+                                            src="https://cdn2.iconfinder.com/data/icons/Qetto___icons_by_ampeross-d4njobq/256/css.png"
                                             alt="css" />
                                         <img class="mr-3" width="40px" src="./images/js.png">
                                         <img class="mr-3" width="40px"
-                                            src="https://image.flaticon.com/icons/svg/919/919851.svg" alt="React" />
+                                            src="https://cdn0.iconfinder.com/data/icons/logos-brands-in-colors/128/react_color-64.png" alt="React" />
                                     </div>
                                 </div>
                             </div>
