added fix for closed captions

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 
 <head>
+    <title>My Page Title</title>
+    <link rel="icon" type="image/png" href="/images/portfolio.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css" />
@@ -12,7 +14,7 @@
             <img src="./images/waves.svg" />
         </div> 
         <div>
-            <img id="photo" src="./images/madhuri.jpeg" alt="photo" />
+            <img id="photo" src="./images/madhuri.jpg" alt="photo" />
             <h1 class="text-center">Madhuri Sonawat</h1>
             <h5 class="text-center text-secondary">Full Stack Developer</h5>
             <div class="container text-center mt-5">
@@ -52,12 +54,12 @@
         </div>
         <div class="container text-center ">
             <div id="about">
-                <h5 class="text-secondary"> A passionate,hardworking,self-motivated and fully dedicated Software
-                    Developer.
-                    Good on hands on experience efficiently coding websites and applications.
-                    Looking forward to join a company where I can impart my skills. </h5>
+                <h5 class="text-secondary"> Dynamic Frontend Developer with practical experience of 3.5 years in designing and
+                    implementing visually appealing user interfaces using React.js and related
+                    technologies. Skilled in developing high-quality, reusable, and scalable code. Proficient
+                    in JavaScript, HTML, CSS, and RESTful API integration. </h5>
             </div>
-            <div><a href="https://drive.google.com/file/d/1HbBIJvyR0uA-dNvXoUn02e9wK_HB5AQj/view?usp=drive_link"target="blank"><button id="btn">Resume</button></div></a>
+            <div><a href="https://drive.google.com/file/d/1W_0Fz5Dlk7m9O_t5Cqs2wSz74dPSASjF/view?usp=drive_link"target="blank"><button id="btn">Resume</button></div></a>
         </div>
         <hr />
          <h1 class="text-center">Tech Stack</h1>
@@ -121,6 +123,20 @@
 
 
         </div> 
+        <hr/>
+        <h1 class="text-center">Work Experience</h1>
+        <div class="work">
+            <h3>React Developer(Remote)</h3>
+            <p>Airmeet Network Private Limited - Dec 2020 -May 2024</p>
+            <ul>
+            <li>Incorporated a personalized Booth feature into our event page, which allows users to add various multimedia elements such as images, videos, links, and more.</li>
+            <li>I independently developed a feature that enables users to upload CSV files, view the uploaded content and errors, and download a list of all the added details.</li>
+            <li>Single-handedly, I created a brand-new feature that empowers users to personalize their offers, review them, and subscribe as per their preferences.</li>
+            <li>GDPR Compliance for Data Center: Spearheaded and implemented comprehensive strategies to ensure GDPR compliance within the data center environment. Collaborated with cross-functional teams to establish and enforce robust data protection policies and procedures. Implemented encryption and access control measures to safeguard sensitive data, ensuring adherence to GDPR standards.</li>
+            <li>Participated in architecture, design and implementation of front-end features using React and Redux. ◦ Mentored junior developers to get ﬁrm knowledge of code stack and help them to understand core concepts.</li>
+            <li>Worked with software development and testing team members to design and develop robust solutions to meet client requirements for functionality, scalability, and performance.</li>
+        </ul>
+        </div>
         <hr />
         <h1 class="text-center">Projects</h1>
         <div id="project" class="container-fluid py-1">
@@ -138,7 +154,7 @@
                                     countries.
                                     All details are available in one platform.</h5>
                                 <div class="text-left">
-                                    <a href="https://github.com/madhurisonawat/masai--sprint-3"><img
+                                    <a href="https://github.com/madhurisonawat/masai--sprint-3" target="blank"><img
                                             src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png"
                                             width="40px" /></a>Github Link
                                     <a href="https://new-covid-19.netlify.app/" target="blank"><img class="live"
@@ -259,11 +275,11 @@
                                     accordingly.
                                 </h5>
                                 <div class="text-left">
-                                    <a href="https://github.com/madhurisonawat/Typing-speed" traget="blank">
+                                    <a href="https://github.com/madhurisonawat/Typing-speed" target="blank">
                                         <img width="40px"
                                             src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-social-github-64.png" />
                                     </a>Github Link
-                                    <a href="https://typing-speed-game.netlify.app/"><img class="live"
+                                    <a href="https://typing-speed-game.netlify.app/" target="blank"><img class="live"
                                             src="https://cdn1.iconfinder.com/data/icons/unicons-line-vol-4/24/link-h-256.png" /></a>
                                     <hr />
                                     <div class="mt-3">
