added fix for portfolio

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <h5 class="text-secondary"> Dynamic Frontend Developer with practical experience of 3.5 years in designing and
                     implementing visually appealing user interfaces using React.js and related
                     technologies. Skilled in developing high-quality, reusable, and scalable code. Proficient
-                    in JavaScript, HTML, CSS, and RESTful API integration. </h5>
+                    in JavaScript, HTML, CSS, and RESTFUL API integration. </h5>
             </div>
         </div>
         <hr />
