added resume link

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="#tech-stack">Technical Skills</a>
             <a href="#git-stats">Git Stats</a>
             <a href="#contact">Contact</a>
-            <a href="https://drive.google.com/uc?export=download&id=15V0tZ6eWrlmnyHmkXigAwskX3SihimqG" download="resume.pdf"target="_blank">
+            <a href="https://drive.google.com/file/d/1TnnboL8OVFDT53jRhEueZs5RsmHFUtSB/view?usp=drive_link" download="resume.pdf"target="_blank">
                 <button id="btn">Resume</button>
             </a>
 
